# enterprise-rag

./: .env.example  .gitignore  QUICKSTART.md  README.md  TEST_REPORT.md  pyproject.toml  query_chroma.py  requirements.txt
.trae/documents/: RAG项目改造为智能客服系统.md  Remove Customer Service Features and Optimize RAG Functionality.md  企业RAG系统功能完善规划.md
deploy/docker/: Dockerfile  docker-compose.yml  start.bat  start.sh  start_local.sh
deploy/k8s/: configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
docs/: OSS配置说明.md  多模态功能配置说明.md  智能客服改造方案.md  混合检索配置说明.md  通义千问多模态服务配置说明.md  阿里云多模态服务配置说明.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/components/: MarkdownRenderer.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  knowledgeBase.js
frontend/src/utils/: request.js
frontend/src/views/: Chat.vue  Dashboard.vue  (+10 more)
scripts/: check_db.py  create_database.sql  init_db.py  queries.sql  test_core.py  test_system.py
src/api/: auth.py  main.py
src/config/: settings.py
src/core/: aliyun_multimodal.py  audio_transcoder.py  document_processor.py  embeddings.py  hybrid_retriever.py  llm.py  multimodal_processor.py  qwen_multimodal.py  rag_engine.py  reranker.py  vector_store.py
src/models/: database.py  schemas.py
src/services/: auth_service.py  file_storage_service.py  intent_service.py  knowledge_base_service.py  sentiment_service.py
src/utils/: auth.py  dependencies.py
test_chroma/: chroma.sqlite3
